View and ViewModel

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -40,6 +40,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EndpointStrings.cs" />
     <Compile Include="NoteManager.cs" />
     <Compile Include="Result.cs" />
   </ItemGroup>
